--- a/jTPS-mine/jTPS_Unit_Test.html
+++ b/jTPS-mine/jTPS_Unit_Test.html
@@ -24,14 +24,14 @@
     <div id="layout">
         <p><strong><h2 class="header">testAdd</h2></strong></p>
         <p><strong>Add 5 Transaction: </strong> 
-            <button id="submit_button"  onclick="add5Button()">Submit</button>
+            <button id="submit_button"  onclick="add5Button()">Test</button>
             <p >num.getNum: '5' <input class="input_style" id="getNum5"/> </p>
             <p >tps.getSize: '1' <input class="input_style" id="getSize5"/> </p>
             <p >tps.getRedoSize: '0' <input class="input_style" id="getRedoSize5"/> </p>
             <p >tps.getUndoSize: '1' <input class="input_style" id="getUndoSize5"/> </p>
         </p>
         <p><strong>Add 10 Transaction: </strong> 
-            <button id="submit_button2"  onclick="add10Button()">Submit</button>
+            <button id="submit_button2"  onclick="add10Button()">Test</button>
             <p >num.getNum: '15' <input class="input_style"  id="getNum10"/> </p>
             <p >tps.getSize: '2'<input class="input_style" id="getSize10"/> </p>
             <p>tps.getRedoSize: '0'<input class="input_style" id="getRedoSize10"/> </p>
@@ -39,7 +39,7 @@
         </p>
 
         <p><strong>Add 20 Transaction: </strong> 
-            <button id="submit_button3"  onclick="add20Button()">Submit</button>
+            <button id="submit_button3"  onclick="add20Button()">Test</button>
             <p>num.getNum: '35' <input class="input_style"   id="getNum20"/></p>
             <p >tps.getSize: '3'<input class="input_style" id="getSize20" /></p>
             <p >tps.getRedoSize: '0'<input class="input_style" id="getRedoSize20" /></p>
@@ -50,7 +50,7 @@
         <p><strong><h2 class="header">testAndMask</h2></strong></p>
 
         <p><strong>Add 12 Transaction: </strong> 
-            <button id="submit_button"  onclick="add12Button()">Submit</button>
+            <button id="submit_button"  onclick="add12Button()">Test</button>
             <p >num.getNum: '4' <input class="input_style" id="getNum12" /></p>
             <p >tps.getSize: '2'<input class="input_style" id="getSize12" /></p>
 
@@ -65,7 +65,7 @@
         <p><strong><h2 class="header">testUndo</h2></strong></p>
 
         <p><strong>Add 3 Transaction: (5, 10, 20)</strong> 
-            <button id="submit_button"  onclick="add3Button()">Submit</button>
+            <button id="submit_button"  onclick="add3Button()">Test</button>
             <p >num.getNum: '0' <input class="input_style" id="getNum3" /></p>
             <p >tps.hasTransactionUndo: 'false' <input class="input_style" id="hasTransactionUndo" /></p>
             <p >tps.hasTransactionRedo: 'false' <input class="input_style" id="hasTransactionRedo" /></p>
@@ -117,7 +117,7 @@
 
         <p><strong><h2 class="header">testRedo</h2></strong></p>
         <p><strong>Add 3 Transaction: (5, 10, 20)</strong> 
-            <button id="submit_button"  onclick="testRedo()">Submit</button>
+            <button id="submit_button"  onclick="testRedo()">Test</button>
             
             <p >tps.hasTransactionUndo 'True' <input class="input_style" id="num34" /></p>
             <p >tps.hasTransactionRedo 'False' <input class="input_style" id="num35" /></p>
@@ -172,7 +172,7 @@
         </p>
         <p><strong><h2 class="header">testClear</h2></strong></p>
         <p><strong>Add 3 Transaction: (5, 10, 20)</strong> 
-            <button id="submit_button"  onclick="testClear()">Submit</button>
+            <button id="submit_button"  onclick="testClear()">Test</button>
             
             <p >tps.hasTransactionUndo 'True' <input class="input_style" id="num74" /></p>
             <p >tps.hasTransactionRedo 'False' <input class="input_style" id="num75" /></p>
